web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-arrow-expression-rest/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,13)
1|(...x) => { "use strict" }
 |           ^
